Add form handling and customer service contact functionality

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </li>
             </li>
             <li class="nav-item">
-              <a href="#" type="button" class="btn tombol">Daftar</a>
+              <a href="form.html" type="button" class="btn tombol">Daftar</a>
             </li>
           </ul>
         </div>
@@ -81,7 +81,7 @@
               <h1 class="display-4">Provider Baru Paling Worth It!</h1>
               <p class="lead">Mynet memberikanmu paket internet termurah dengan tv terlengkap.</p>
               <div class="btn-jumbo">
-                <a href="#" type="button" class="btn tombol">Daftar</a>
+                <a href="form.html" type="button" class=" btn tombol ">Daftar</a>
                 <a href="#" type="button" class="btn tombol-transparan"><i class="fas fa-map-marker-alt pr-3"></i>Cek
                   Jangkauan</a>
               </div>
@@ -103,7 +103,7 @@
       </div>
     </div>
   </div>
-  <div class="container flex-container">
+  <div class="container flex-container" id="Promo">
     <div class="card">
       <div class="header text-center">
         <h1 class="title">Hemat</h1>
@@ -118,7 +118,7 @@
         <p>250.000</p>
       </div>
       <div class="text-center mt-4 content">
-        <a href="#" type="button" class=" btn tombol-transparan ">Daftar</a>
+        <a href="form.html?paket=hemat&speed=15&price=250000" type="button" class="btn tombol-transparan">Daftar</a>
       </div>
     </div>
     <div class="card besar">
@@ -135,7 +135,7 @@
         <p>320.000</p>
       </div>
       <div class="text-center content mt-4">
-        <a href="#" type="button" class=" btn tombol ">Daftar</a>
+        <a href="form.html?paket=pas&speed=30&price=320000" type="button" class="btn tombol">Daftar</a>
       </div>
     </div>
     <div class="card">
@@ -152,7 +152,7 @@
         <p>400.000</p>
       </div>
       <div class="text-center content mt-4">
-        <a href="#" type="button" class=" btn tombol-transparan">Daftar</a>
+        <a href="form.html?paket=super&speed=50&price=400000" type="button" class="btn tombol-transparan">Daftar</a>
       </div>
     </div>
   </div>
@@ -182,10 +182,10 @@
         <div class="col-lg-6">
           <p class="info">Mynet merupakan provider masa kini yang membuatmu semakin maju. Sekarang kamu dapat memasang
             provider
-            dirumahmu sendiri dengan hanya Rp 250.000 saja! Mynet selalu mengedepankan kualitas dengan harga paling
+            dirumahmu sendiri dengan hanya Rp 100.000 saja! Mynet selalu mengedepankan kualitas dengan harga paling
             terjangkau se-Indonesia</p>
           <div class="text-center">
-            <a href="#" type="button" class=" btn tombol">Lihat semua Paket</a>
+            <a href="index.html#Promo" type="button" class=" btn tombol">Lihat semua Paket</a>
           </div>
         </div>
       </div>
@@ -264,52 +264,27 @@
         </div>
         <div class="col-lg-3">
           <h1>Customer Service</h1>
-          <div class="card-footers2">
-            <p>Untuk keluhan dan gangguan </p>
-            <div class="padding-footer">
-              <h2>150 133</h2>
-              <form>
-                <select class="form-control">
-                  <option>Default select</option>
-                </select>
-              </form>
-            </div>
-          </div>
-          <button type="submit" class="btn tombol">Telp</button>
-        </div>
-        <div class="col-lg-3">
-          <h1>Kontak Kami</h1>
-          <p>Untuk berlangganan produk Mynet</p>
-          <div class="padding-footer2">
-            <h2>150 133</h2>
-            <form>
-              <select class="form-control">
-                <option>Default select</option>
-              </select>
-            </form>
-          </div>
-          <button type="submit" class="btn tombol">Telp</button>
+          <p>Untuk bantuan lebih lanjut, silakan hubungi kami.</p>
+          <button class="btn tombol" id="customer-service" >Hubungi Kami</button>
         </div>
       </div>
-    </div>
-    <div class="row title-brand-footer justify-content-center">
-      <h1 class="title-brand">My</h1>
-    </div>
-    <div class="row icon-awesome justify-content-center">
-      <a href="https://www.facebook.com/sandro.manullang.90" class=""><i class="fab fa-facebook fa-3x mr-3"></a></i>
-      <a href="https://www.linkedin.com/in/sandro-hamonangan-25b0231b3/" class=""><i
-          class="fab fa-linkedin fa-3x mr-3 "></a></i>
-      <a href="https://www.instagram.com/sandroomanulang/" class=""><i class="fab fa-instagram fa-3x mr-3 "></a></i>
-      <a href="https://www.facebook.com" class=""><i class="fab fa-whatsapp fa-3x mr-3 "></a></i>
-      <a href="https://www.facebook.com" class=""><i class="fas fa-envelope fa-3x mr-3 "></a></i>
-    </div>
+      <!-- <div class="row title-brand-footer justify-content-center">
+        <h1 class="title-brand">My</h1>
+      </div> -->
+      <!-- <div class="row icon-awesome justify-content-center">
+        <a href="https://www.facebook.com/sandro.manullang.90" class=""><i class="fab fa-facebook fa-3x mr-3"></i></a>
+        <a href="https://www.linkedin.com/in/sandro-hamonangan-25b0231b3/" class=""><i class="fab fa-linkedin fa-3x mr-3"></i></a>
+        <a href="https://www.instagram.com/sandroomanulang/" class=""><i class="fab fa-instagram fa-3x mr-3"></i></a>
+        <a href="https://www.facebook.com" class=""><i class="fab fa-whatsapp fa-3x mr-3"></i></a>
+        <a href="https://www.facebook.com" class=""><i class="fas fa-envelope fa-3x mr-3"></i></a>
+      </div> -->
     </div>
   </footer>
-
 
   <script src="js/jquery.slim.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/script.js"></script>
+
 </body>
 
 </html>
