--- a/index.html
+++ b/index.html
@@ -37,30 +37,23 @@
           aria-label="Toggle navigation">
           <div class="animated-icon3"><span></span><span></span><span></span></div>
         </button>
-        <a class="navbar-brand" href="#">My</a>
+        <a class="navbar-brand" href="index.html">My</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent22">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Produk</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-expanded="false">Promo </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Bantuan</a>
-                <a class="dropdown-item" href="#">Tentang Kami</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Bantuan</a>
+              <a class="nav-link" href="form.html">Produk</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tentang Kami</a>
+              <a class="nav-link" href="promo.html">Promo</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="bantuan.html">Bantuan</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">Tentang Kami</a>
             </li>
             <li class="nav-item">
               <a href="form.html" type="button" class="btn tombol">Daftar</a>
@@ -96,6 +89,41 @@
   </section>
 
   <!-- home -->
+  <section class="features-section">
+    <div class="container">
+      <h2 class="section-title text-center">Mengapa Memilih Kami?</h2>
+      <div class="row">
+        <div class="col-md-4" data-aos="fade-up">
+          <div class="feature-box">
+            <div class="feature-icon">
+              <i class="fas fa-rocket"></i>
+            </div>
+            <h3>Kecepatan Tinggi</h3>
+            <p>Koneksi super cepat hingga 100 Mbps untuk streaming dan gaming tanpa lag.</p>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="feature-box">
+            <div class="feature-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <h3>Stabilitas Terjamin</h3>
+            <p>Teknologi fiber optik untuk koneksi yang stabil dan handal.</p>
+          </div>
+        </div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
+          <div class="feature-box">
+            <div class="feature-icon">
+              <i class="fas fa-headset"></i>
+            </div>
+            <h3>24/7 Support</h3>
+            <p>Tim support profesional siap membantu Anda kapanpun.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="container">
     <div class="row text-center justify-content-center mt-5 mb-5">
       <div class="col-lg-5">
@@ -160,7 +188,7 @@
     <div class="row mt-5">
       <div class="col-lg">
         <div class="text-center content out">
-          <a href="#" type="button" class=" btn tombol-transparan">Lihat semua Paket</a>
+          <a href="promo.html" type="button" class=" btn tombol-transparan">Lihat semua Paket</a>
         </div>
       </div>
     </div>
@@ -232,6 +260,7 @@
           <p>Tenang, kamu dapat menghubungi Mister Net untuk berkonsultasi mengenai paket yang paling cocok dengan
             kamu.
             Yuk! Segera tanya Mister Net sekarang!</p>
+            <p>Coba Lihat Produk kami <a href="promo.html">Promo</a></p>
         </div>
         <div class="col-lg-6">
           <img src="img/people.png" alt="konsultasi" class="img">
@@ -268,9 +297,9 @@
           <button class="btn tombol" id="customer-service" >Hubungi Kami</button>
         </div>
       </div>
-      <!-- <div class="row title-brand-footer justify-content-center">
+      <div class="row title-brand-footer justify-content-center">
         <h1 class="title-brand">My</h1>
-      </div> -->
+      </div>
       <!-- <div class="row icon-awesome justify-content-center">
         <a href="https://www.facebook.com/sandro.manullang.90" class=""><i class="fab fa-facebook fa-3x mr-3"></i></a>
         <a href="https://www.linkedin.com/in/sandro-hamonangan-25b0231b3/" class=""><i class="fab fa-linkedin fa-3x mr-3"></i></a>
