--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="form.html">Produk</a>
+              <a class="nav-link" href="Test_konneksi.html">Speed Test</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="promo.html">Promo</a>
