--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent22">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Beranda</a>
+              <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="form.html">Produk</a>
+              <a class="nav-link" href="Test_konneksi.html">Speed Test</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="promo.html">Promo</a>
