--- a/bantuan.html
+++ b/bantuan.html
@@ -119,7 +119,7 @@
               <a class="nav-link" href="index.html">Beranda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="form.html">Produk</a>
+              <a class="nav-link" href="Test_konneksi.html">Speed Test</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="promo.html">Promo</a>
