--- a/promo.html
+++ b/promo.html
@@ -34,8 +34,8 @@
       border-radius: 15px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
       background: linear-gradient(135deg, #007bff, #0056b3);
-      width: 1000px;
-      height: 450px; 
+      width: auto;
+      height: auto; 
       justify-self: unset;
       margin: auto;
       padding: 30px;
@@ -160,10 +160,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent22">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="form.html">Produk</a>
+              <a class="nav-link" href="Test_konneksi.html">Speed Test</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="promo.html" id="navbarDropdown" role="button" data-toggle="dropdown"
