--- a/index.html
+++ b/index.html
@@ -75,8 +75,60 @@
               <p class="lead">Mynet memberikanmu paket internet termurah dengan tv terlengkap.</p>
               <div class="btn-jumbo">
                 <a href="form.html" type="button" class=" btn tombol ">Daftar</a>
-                <a href="#" type="button" class="btn tombol-transparan"><i class="fas fa-map-marker-alt pr-3"></i>Cek
+                <a href="#" type="button" class="btn tombol-transparan" onclick="checkLocation()"><i class="fas fa-map-marker-alt pr-3"></i>Cek
                   Jangkauan</a>
+                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                <script>
+                  function checkLocation() {
+                  if (navigator.geolocation) {
+                    navigator.permissions.query({ name: 'geolocation' }).then(function (result) {
+                    if (result.state === 'granted' || result.state === 'prompt') {
+                      navigator.geolocation.getCurrentPosition(
+                      function (position) {
+                        const latitude = position.coords.latitude;
+                        const longitude = position.coords.longitude;
+
+                        fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`)
+                        .then(response => response.json())
+                        .then(data => {
+                          const village = data.address.village || data.address.hamlet || "Tidak diketahui";
+                          const county = data.address.county || "Tidak diketahui";
+                          Swal.fire({
+                          title: 'Lokasi Anda',
+                          html: `Desa: ${village}<br>Kabupaten: ${county}<br><br>Jika Anda mau, silakan pergi ke <a href="Test_konneksi.html">Speedtest</a> untuk cek WiFi Anda.`,
+                          icon: 'info',
+                          confirmButtonText: 'OK'
+                          });
+                        })
+                        .catch(() => {
+                          Swal.fire({
+                          title: 'Error',
+                          text: 'Gagal mendapatkan informasi lokasi.',
+                          icon: 'error',
+                          confirmButtonText: 'OK'
+                          });
+                        });
+                      }
+                      );
+                    } else {
+                      Swal.fire({
+                      title: 'Akses Lokasi Ditolak',
+                      text: 'Silakan izinkan akses lokasi di pengaturan browser Anda.',
+                      icon: 'error',
+                      confirmButtonText: 'OK'
+                      });
+                    }
+                    });
+                  } else {
+                    Swal.fire({
+                    title: 'Geolocation Tidak Didukung',
+                    text: 'Geolocation tidak didukung oleh browser Anda.',
+                    icon: 'error',
+                    confirmButtonText: 'OK'
+                    });
+                  }
+                  }
+                </script>
               </div>
             </div>
             <div class="col-lg-6 ">
