--- a/index.html
+++ b/index.html
@@ -75,108 +75,108 @@
               <p class="lead">Mynet memberikanmu paket internet termurah dengan tv terlengkap.</p>
               <div class="btn-jumbo">
                 <a href="form.html" type="button" class=" btn tombol ">Daftar</a>
-                <a href="#" type="button" class="btn tombol-transparan" onclick="checkLocationAndSave()"><i
-                    class="fas fa-map-marker-alt pr-3"></i>Cek
-                  Jangkauan</a>
-                <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-                <script>
-                  function checkLocationAndSave() {
-                    if (navigator.geolocation) {
-                      navigator.permissions.query({ name: 'geolocation' }).then(function (result) {
-                        if (result.state === 'granted' || result.state === 'prompt') {
-                          navigator.geolocation.getCurrentPosition(function (position) {
-                            const latitude = position.coords.latitude;
-                            const longitude = position.coords.longitude;
+              <a href="#" type="button" class="btn tombol-transparan" onclick="checkLocationAndSave()"><i
+                  class="fas fa-map-marker-alt pr-3"></i>Cek
+                Jangkauan</a>
+              <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+              <script>
+                function checkLocationAndSave() {
+                  if (navigator.geolocation) {
+                    navigator.permissions.query({ name: 'geolocation' }).then(function (result) {
+                      if (result.state === 'granted' || result.state === 'prompt') {
+                        navigator.geolocation.getCurrentPosition(function (position) {
+                          const latitude = position.coords.latitude;
+                          const longitude = position.coords.longitude;
 
-                            // GET LOKASI DARI Koordinat
-                            fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`)
-                              .then(response => response.json())
-                              .then(data => {
-                                const village = data.address.village || data.address.hamlet || "Tidak diketahui";
-                                const county = data.address.county || "Tidak diketahui";
+                          // GET LOKASI DARI Koordinat
+                          fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`)
+                            .then(response => response.json())
+                            .then(data => {
+                              const village = data.address.village || data.address.hamlet || "Tidak diketahui";
+                              const county = data.address.county || "Tidak diketahui";
 
-                                // GET IP & ISP dari ipinfo.io
-                                fetch('https://ipinfo.io/json?token=35f0f89e4080d3')
-                                  .then(res => res.json())
-                                  .then(ipData => {
-                                    const ipAddress = ipData.ip;
-                                    const isp = ipData.org || "Tidak diketahui";
-                                    const deviceName = navigator.userAgent;
+                              // GET IP & ISP dari ipinfo.io
+                              fetch('https://ipinfo.io/json?token=35f0f89e4080d3')
+                                .then(res => res.json())
+                                .then(ipData => {
+                                  const ipAddress = ipData.ip;
+                                  const isp = ipData.org || "Tidak diketahui";
+                                  const deviceName = navigator.userAgent;
 
-                                    const payload = {
-                                      ipAddress,
-                                      isp,
-                                      deviceName,
-                                      location: {
-                                        // datatime,
-                                        village,
-                                        county,
-                                        latitude,
-                                        longitude
-                                      }
-                                    };
+                                  const payload = {
+                                    ipAddress,
+                                    isp,
+                                    deviceName,
+                                    location: {
+                                      // datatime,
+                                      village,
+                                      county,
+                                      latitude,
+                                      longitude
+                                    }
+                                  };
 
-                                    fetch('save.php', {
-                                      method: 'POST',
-                                      headers: {
-                                        'Content-Type': 'application/json'
-                                      },
-                                      body: JSON.stringify(payload)
-                                    }).then(() => {
-                                      Swal.fire({
-                                        title: 'Lokasi Anda',
-                                        html: `
-                        Desa: ${village}<br>
-                        Kabupaten: ${county}<br>
-                        Jam: ${new Date().toLocaleString()}<br>
-                        IP: ${ipAddress}<br>
-                        ISP: ${isp}<br><br>
-                        pesan:
-                           <strong>Terima kasih telah menggunakan layanan kami!</strong><br>
-                          Kami akan segera menghubungi Anda untuk memberikan informasi lebih lanjut.<br>
-                          Jika Anda mau, silakan pergi ke <a href="Test_konneksi.html">Speedtest</a> untuk cek WiFi Anda.<br>
-                      `,
-                                        icon: 'info',
-                                        confirmButtonText: 'OK'
-                                      });
-                                    }).catch(() => {
-                                      Swal.fire({
-                                        title: 'Error',
-                                        text: 'Gagal menyimpan data.',
-                                        icon: 'error',
-                                        confirmButtonText: 'OK'
-                                      });
+                                  fetch('api/save.js', {
+                                    method: 'POST',
+                                    headers: {
+                                      'Content-Type': 'application/json'
+                                    },
+                                    body: JSON.stringify(payload)
+                                  }).then(() => {
+                                    Swal.fire({
+                                      title: 'Lokasi Anda',
+                                      html: `
+                      Desa: ${village}<br>
+                      Kabupaten: ${county}<br>
+                      Jam: ${new Date().toLocaleString()}<br>
+                      IP: ${ipAddress}<br>
+                      ISP: ${isp}<br><br>
+                      pesan:
+                          <strong>Terima kasih telah menggunakan layanan kami!</strong><br>
+                        Kami akan segera menghubungi Anda untuk memberikan informasi lebih lanjut.<br>
+                        Jika Anda mau, silakan pergi ke <a href="Test_konneksi.html">Speedtest</a> untuk cek WiFi Anda.<br>
+                    `,
+                                      icon: 'info',
+                                      confirmButtonText: 'OK'
+                                    });
+                                  }).catch(() => {
+                                    Swal.fire({
+                                      title: 'Error',
+                                      text: 'Gagal menyimpan data.',
+                                      icon: 'error',
+                                      confirmButtonText: 'OK'
                                     });
                                   });
-                              })
-                              .catch(() => {
-                                Swal.fire({
-                                  title: 'Error',
-                                  text: 'Gagal mendapatkan informasi lokasi.',
-                                  icon: 'error',
-                                  confirmButtonText: 'OK'
                                 });
+                            })
+                            .catch(() => {
+                              Swal.fire({
+                                title: 'Error',
+                                text: 'Gagal mendapatkan informasi lokasi.',
+                                icon: 'error',
+                                confirmButtonText: 'OK'
                               });
-                          });
-                        } else {
-                          Swal.fire({
-                            title: 'Akses Lokasi Ditolak',
-                            text: 'Silakan izinkan akses lokasi di pengaturan browser Anda.',
-                            icon: 'error',
-                            confirmButtonText: 'OK'
-                          });
-                        }
-                      });
-                    } else {
-                      Swal.fire({
-                        title: 'Geolocation Tidak Didukung',
-                        text: 'Geolocation tidak didukung oleh browser Anda.',
-                        icon: 'error',
-                        confirmButtonText: 'OK'
-                      });
-                    }
+                            });
+                        });
+                      } else {
+                        Swal.fire({
+                          title: 'Akses Lokasi Ditolak',
+                          text: 'Silakan izinkan akses lokasi di pengaturan browser Anda.',
+                          icon: 'error',
+                          confirmButtonText: 'OK'
+                        });
+                      }
+                    });
+                  } else {
+                    Swal.fire({
+                      title: 'Geolocation Tidak Didukung',
+                      text: 'Geolocation tidak didukung oleh browser Anda.',
+                      icon: 'error',
+                      confirmButtonText: 'OK'
+                    });
                   }
-                </script>
+                }
+              </script>
               </div>
             </div>
             <div class="col-lg-6 ">
